fix modal size on mobile. big css patch breaking user x.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1409,7 +1409,7 @@ footer {
   #overlay.active {
     .modal {
       iframe {
-        width: 450px;
+        width: 100%;
       }
     }
     .trailer-modal {
